# auraforge

./: .gitignore  .npmrc  AUDIT_REPORT.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_MAP.md  IMPLEMENTATION_PLAN_TO_COMPLETION.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SECURITY.md  SPEC.md  TEST_REPORT.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.codex/: codex-os.manifest.json  commands.md  setup.sh
.codex/actions/: build.sh  dev-lean.sh  lint.sh  test.sh
distribution/: INSTALL.md  QUICK_REFERENCE.md  README.md
docs/: artifact-diffing.md  export-presets.md  lint-rules.md  next-phases-plan.md  release-notes-2026-02-08.md  repo-ingest.md  template-authoring.md
scripts/: cleanup-all-local.sh  cleanup-heavy.sh  lean-dev.sh
src/: App.integration.test.tsx  App.tsx  index.css  test-utils.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/artifact_diff/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/docgen/: confidence.rs  mod.rs  prompts.rs  quality.rs
src-tauri/src/importer/: mod.rs
src-tauri/src/lint/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/search/: duckduckgo.rs  mod.rs  searxng.rs  tavily.rs  trigger.rs
src-tauri/src/templates/: mod.rs
src-tauri/templates/: api-service.json  backend-service.json  cli-tool.json  internal-it-automation.json  saas-web-app.json  tauri-desktop-app.json
(+43 files in other folders)
