[package]
name = "auraforge"
version = "0.1.0"
description = "AuraForge - Claude Code Project Planning Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "auraforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Ollama and search APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTML parsing for DuckDuckGo scraper
scraper = "0.22"

# Utilities
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dirs = "5"
futures = "0.3"
log = "0.4"

# Async channels for streaming
tokio-stream = "0.1"

# Logging
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3"
